--- a/alarm/package.json
+++ b/alarm/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "redis": "2.4.2",
+    "node-mpg123": "0.6.1"
+  }
 }
