--- a/alarm/package.json
+++ b/alarm/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "redis": "2.4.2",
-    "node-mpg123": "0.6.1"
+    "redis": "*",
+    "node-mpg123": "*"
   }
 }
